AAK karriärer–Assistant Technical Product Manager. Reward Gateway - E-Commerce Product Manager. Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN. Cermati.com Product Manager (All Level) | SmartRecruiters. Job Application for Product Designer Manager at Graphisoft. Diversatek, Inc. Careers - Product Manager, Medical Devices. Divvy - Senior Product Designer. Job Application for Product Manager, Delivery at Marqeta. eFront - Product Owner - Paris or Belgrade. Endless - Sr. Product Designer. Endless - Product Designer. Tradesy - Product Designer. Liferay, Inc. Careers - Product Designer. Job Application for Product Manager  at CityBase. Job Application for Product Manager, Productivity & Domains (BA) at AppDirect. Symplicity - Senior Product Manager. Shopify - Product Manager. Funding Circle UK Careers - Senior Product Manager, Investor. Job Application for Senior Product Designer at Splash.     Product Manager at LoveCrafts .       Senior Product Owner - Tylko     . Senior Technical Product Manager, Sales and Support Platforms. BlackLine Careers - Staff Product Designer. BlackLine Careers - Principal Product Manager. Job Application for Senior Product Manager, API at GitHub. Job Application for Principal UX & Product Designer at Conductor. Job @ KI Group (Cologne): Product Owner | JOIN. Cloudability - Jobs: Senior Product Manager - Apply online. SkySlope - Jobs: Senior Product Manager - Apply online. Pegipegi - Jobs: Associate Product Manager - Apply online. Job Application for Senior Product Manager (Baltimore) at Ad Hoc. Job Application for Associate Product Manager at Guild Education. Product Manager - Cross Border Bill Pay - Western Union Careers. Job Application for Product Manager - Integrations at Human Interest. Netatmo INTERNSHIP - Project & Product Manager | SmartRecruiters. Ingram Micro Careers - Senior Product Manager. Brandwatch Careers - Senior Product Manager. ThinkHR - Technical Product Manager. ThinkHR - Senior Product Manager – Conversatio

--- a/product-manager.html
+++ b/product-manager.html
@@ -44,7 +44,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rewardgateway/426a19fb-9393-455c-af59-1f33bbe7ce3d'>Reward Gateway - E-Commerce Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rewardgateway/426a19fb-9393-455c-af59-1f33bbe7ce3d'>Reward Gateway - E-Commerce Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -64,7 +64,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/divvypay/9d5f5387-d239-46e8-bb66-fe389c8702e8'>Divvy - Senior Product Designer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/divvypay/9d5f5387-d239-46e8-bb66-fe389c8702e8'>Divvy - Senior Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -96,7 +96,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/appdirect/jobs/4370393002'>Job Application for Product Manager, Productivity & Domains (BA) at AppDirect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appdirect/jobs/4370393002'>Job Application for Product Manager, Productivity & Domains (BA) at AppDirect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -198,11 +198,11 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thinkhr/b288d7a7-1dbd-4512-804f-16e407c2a18c'>ThinkHR - Senior Product Manager ? Conversational AI</a></h5> 
+<h5><a href='https://jobs.lever.co/thinkhr/b288d7a7-1dbd-4512-804f-16e407c2a18c'>ThinkHR - Senior Product Manager ? Conversational AI</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://relogix.recruitee.com/o/product-manager-1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://relogix.recruitee.com/o/product-manager-1'>
       Product Manager - Relogix
     </a></h5> 
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
@@ -224,7 +224,7 @@ processes.</p>
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/liferay/job/otdBafwb'>Liferay, Inc. Careers - Product Designer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/liferay/job/otdBafwb'>Liferay, Inc. Careers - Product Designer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -271,7 +271,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/vimeo/jobs/1792324'>Job Application for Product Manager, Payments at Vimeo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/vimeo/jobs/1792324'>Job Application for Product Manager, Payments at Vimeo</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -293,7 +293,7 @@ other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/coffeemeetsbagel/1db0f7e6-e8e7-4299-a048-5269f7c10d4d'>Coffee Meets Bagel - Product Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/coffeemeetsbagel/1db0f7e6-e8e7-4299-a048-5269f7c10d4d'>Coffee Meets Bagel - Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -394,7 +394,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://heavenhr.workable.com/j/0067C34BF6'>HeavenHR - Jobs: Product Manager - SaaS (m/f/x) - Apply online</a></h5> 
+<h5><a href='https://heavenhr.workable.com/j/0067C34BF6'>HeavenHR - Jobs: Product Manager - SaaS (m/f/x) - Apply online</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany Berlin</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
