Job Application for Technical Product Manager at Capital on Tap.  AAK karriärer–Assistant Technical Product Manager. Reward Gateway - E-Commerce Product Manager. Job @ CONSULTPORT (Berlin): Product Manager Intern... | JOIN. Cermati.com Product Manager (All Level) | SmartRecruiters. Job Application for Product Designer Manager at Graphisoft. Diversatek, Inc. Careers - Product Manager, Medical Devices. Divvy - Senior Product Designer. Job Application for Product Manager, Delivery at Marqeta. eFront - Product Owner - Paris or Belgrade. Endless - Sr. Product Designer. Endless - Product Designer. Tradesy - Product Designer. Liferay, Inc. Careers - Product Designer. Job Application for Product Manager  at CityBase. Job Application for Product Manager, Productivity & Domains (BA) at AppDirect. Symplicity - Senior Product Manager. Shopify - Product Manager. Funding Circle UK Careers - Senior Product Manager, Investor. Job Application for Senior Product Designer at Splash.     Product Manager at LoveCrafts .       Senior Product Owner - Tylko     . Senior Technical Product Manager, Sales and Support Platforms. BlackLine Careers - Staff Product Designer. BlackLine Careers - Principal Product Manager. Job Application for Senior Product Manager, API at GitHub. Job Application for Principal UX & Product Designer at Conductor. Job @ KI Group (Cologne): Product Owner | JOIN. Cloudability - Jobs: Senior Product Manager - Apply online. SkySlope - Jobs: Senior Product Manager - Apply online. Pegipegi - Jobs: Associate Product Manager - Apply online. Job Application for Senior Product Manager (Baltimore) at Ad Hoc. Job Application for Associate Product Manager at Guild Education. Product Manager - Cross Border Bill Pay - Western Union Careers. Job Application for Product Manager - Integrations at Human Interest. Netatmo INTERNSHIP - Project & Product Manager | SmartRecruiters. Ingram Micro Careers - Senior Product Manager. Brandwatch Careers - Senior Product Manager. ThinkHR - Technic

--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/capitalontap/jobs/4354577002'>Job Application for Technical Product Manager at Capital on Tap</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-26</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/aak-se/job/oHnuafws'> AAK karri?rer?Assistant Technical Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -64,7 +68,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/divvypay/9d5f5387-d239-46e8-bb66-fe389c8702e8'>Divvy - Senior Product Designer</a></h5> 
+<h5><a href='https://jobs.lever.co/divvypay/9d5f5387-d239-46e8-bb66-fe389c8702e8'>Divvy - Senior Product Designer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -96,7 +100,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appdirect/jobs/4370393002'>Job Application for Product Manager, Productivity & Domains (BA) at AppDirect</a></h5> 
+<h5><a href='https://boards.greenhouse.io/appdirect/jobs/4370393002'>Job Application for Product Manager, Productivity & Domains (BA) at AppDirect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -154,7 +158,7 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/AFC267A132'>Cloudability - Jobs: Senior Product Manager - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/AFC267A132'>Cloudability - Jobs: Senior Product Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Senior Product Manager at Cloudability.</p>
 <hr/>
@@ -202,7 +206,7 @@ processes.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://relogix.recruitee.com/o/product-manager-1'>
+<h5><a href='https://relogix.recruitee.com/o/product-manager-1'>
       Product Manager - Relogix
     </a></h5> 
 <p><span class="badge badge-light">Ottawa, Canada</span></p>
@@ -245,7 +249,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/tourradar/4818b918-3783-4f36-8714-b83badbb5fa5'>TourRadar - Senior Product Designer, Traveller Experiences (Freelance/Remote)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/tourradar/4818b918-3783-4f36-8714-b83badbb5fa5'>TourRadar - Senior Product Designer, Traveller Experiences (Freelance/Remote)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -267,7 +271,7 @@ Supplements at Natural Mojo.</p>
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4364693002'>Job Application for Product Manager, Risk & Anti-fraud at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4364693002'>Job Application for Product Manager, Risk & Anti-fraud at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -373,7 +377,7 @@ other?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999692200516-product-manager-h-f-'>Proprioo Product manager (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999692200516-product-manager-h-f-'>Proprioo Product manager (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -406,7 +410,7 @@ delivering SaaS solutions, or you might be working in a Business Analyst or?...<
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/guidewire-software/job/otmzafwi'>Guidewire Software, Inc. Careers - Principal CRM Product Manager ? San Mateo, CA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/guidewire-software/job/otmzafwi'>Guidewire Software, Inc. Careers - Principal CRM Product Manager ? San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -454,10 +458,6 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <hr/>
 <h5><a href='https://aciworldwide.referrals.selectminds.com/jobs/product-manager-fraud-2782'>Product Manager - Fraud - ACI Worldwide Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-24</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/dashlane/jobs/1790316'>Job Application for Senior Product Manager (B2B)  at Dashlane</a></h5> 
-<p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
 
